refactor: modernize